# DevOps-Course-Starter

./: pyproject.toml
todo_app/: app.py
todo_app/data/: session_items.py
todo_app/templates/: index.html
