[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.3"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.9.1"
flake8 = "^5.0.4"
mypy = "^0.991"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
